<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android_background"
    tools:context=".SecondActivity">


    <TextView
        android:id="@+id/Success_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="70dp"
        android:text="@string/registration_successful"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
    />

    <TextView
        android:id="@+id/msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Success_msg"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="598dp"
        android:text="Your Details were submitted succesfully"
        android:textColor="#F6F5F5" />

    <TableLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/tablebgn">

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@drawable/colbgn"
                android:gravity="center_horizontal"
                android:text="@string/col1"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@drawable/colbgn"
                android:gravity="center_horizontal"
                android:text="@string/col2"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@drawable/colbgn"
                android:gravity="center_horizontal"
                android:text="@string/col3"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/Name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@drawable/colbgn2"
                android:gravity="center_horizontal"
                android:text="@string/row1"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Bday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@drawable/colbgn2"
                android:gravity="center_horizontal"
                android:text="@string/row2"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@drawable/colbgn2"
                android:gravity="center_horizontal"
                android:text="@string/row3"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
        </TableRow>


    </TableLayout>

</RelativeLayout>